...
    override func viewDidLoad() {
        super.viewDidLoad()
        
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 1.25
        scrollView.delegate = self
        imageView.accessibilityIdentifier = "FullSizeImage"
        backButton.accessibilityIdentifier = "nav back button white"
        loadFullImage()
    }
    
    @IBAction private func tapWhiteBackWard() {
        dismiss(animated: true, completion: nil)
    }
...
