...
}

final class ImagesListCell: UITableViewCell {
    
    @IBOutlet weak var cellImage: UIImageView!
    @IBOutlet weak var date: UILabel!
    @IBOutlet weak var likeButton: UIButton!
    var onImageLoaded: (() -> Void)?
    weak var delegate: ImagesListCellDelegate?
    
    static let reuseIdentifier = "ImagesListCell"
    var likeButtonTapped: (() -> Void)?
    
...
